# morphologica

examples/: CMakeLists.txt
examples/kohonen/: CMakeLists.txt  environment.h  environment_reward.h  kohonen.cpp  kohonen.h  kohonen.json  kohonen_reward.h
logs/erm/: 2Derm.h5  params.json  positions.h5
